--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "typescript": "^4.6.3",
     "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
