--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-compound-timer": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
