--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "AIO-Tools",
     "slug": "AIO-Tools",
-    "version": "1.1.0",
+    "version": "2.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -25,7 +25,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
-      "package": "com.vikasphulriya.AIOTools"
+      "package": "com.vikasphulriya.AIOTools",
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/favicon.png"
