--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-constants": "~14.0.2",
+    "expo-document-picker": "~11.0.1",
     "expo-file-system": "~15.1.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
@@ -45,6 +46,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-image-to-pdf": "^1.2.0",
     "react-native-pdf": "^6.6.2",
+    "react-native-pdftron": "github:PDFTron/pdftron-react-native",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
@@ -59,6 +61,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/cli": "^11.2.1",
+    "@react-native-community/cli-platform-android": "^11.2.1",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
